--- a/ayesod.cabal
+++ b/ayesod.cabal
@@ -41,6 +41,7 @@ executable         jalpets
     
     other-modules: Application
                    Foundation
-                   Usuario
-                   Handlers
-                   Front
+                   Agendamento
+                   Animal
+                   Cliente
+                   
