Alteracao do nome e conteudo do arquivo cabal, faltava as referencias produto e servico em other-modules e o nome ainda estava como ayesod

--- a/jalpets.cabal
+++ b/jalpets.cabal
@@ -44,4 +44,5 @@ executable         jalpets
                    Agendamento
                    Animal
                    Cliente
-                   
+                   Servico
+                   Produto
